# c_bugs_run

./: Dockerfile  README.md  debugged.cpp  docker-compose.yaml  setup.sh  teardown.sh
debugger/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  debugged.cpp  hello  minidbg
debugger/programmes/: hello.cpp
